--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dns": "file:./dependent/dns",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
+    "gatsby": "^4.6.0",
     "got": "^12.0.1",
     "graphql": "^14.7.0",
     "graphql-tag": "^2.12.6",
