--- a/package.json
+++ b/package.json
@@ -10,22 +10,15 @@
     "apollo-client": "^2.6.10",
     "apollo-link-prismic": "^1.0.9",
     "axios": "^0.25.0",
-    "contentful": "^9.1.5",
-    "dns": "file:./dependent/dns",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
-    "gatsby": "^4.6.0",
-    "got": "^12.0.1",
     "graphql": "^14.7.0",
     "graphql-tag": "^2.12.6",
-    "http2": "file:./dependent/http2",
     "markdown-draft-js": "^2.4.0",
-    "net": "file:./dependent/net",
     "next": "^12.0.8",
     "react": "^17.0.2",
-    "react-dom": "*",
-    "react-draft-wysiwyg": "^1.14.7",
-    "tls": "file:./dependent/tls"
+    "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7"
   },
   "devDependencies": {
     "webpack": "^5.67.0"
